# mnist-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  convert.py  eval.py  genindex.html  index.html  infer.py  mnist_cnn.onnx.dvc  mnist_sandbox.html  model.py  models.dvc  perf_check.py  py-modindex.html  pyproject.toml  requirements.txt  run_server.py  search.html  searchindex.js  setup.cfg  sota_mnist_cnn.pth  train.py  triton.md
.dvc/: config
.github/workflows/: pre-commit.yml  sphinx_docs_to_gh_pages.yaml
_modules/: index.html
_modules/mnist_sandbox/: eval.html  model.html  train.html
_sources/: index.rst.txt
configs/: convert.yaml  e2e.yaml  eval.yaml  infer.yaml  inference.yaml  train.yaml
docs/: conf.py  index.rst  mnist_sandbox.rst
docs/_build/doctrees/: environment.pickle  index.doctree  mnist_sandbox.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  mnist_sandbox.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  torch.html
docs/_build/html/_modules/mnist_sandbox/: model.html  train.html
docs/_build/html/_sources/: mnist_sandbox.rst.txt
docs/html/: .buildinfo  genindex.html  index.html  mnist_sandbox.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/mnist_sandbox/: train.html
docs/html/_sources/: mnist_sandbox.rst.txt
inference/: inference.npy
logger_mlflow/: Dockerfile  docker-compose.yaml
mnist_sandbox/: __init__.py  data.py  eval.py  main.py  model.py  train.py
triton_backend_cpu/: Dockerfile  client.py  docker-compose.yaml
triton_backend_cpu/model_repository/onnx-mnist-cpu/: config.pbtxt
triton_backend_cpu/tests/: .gitignore  0.png.dvc  8.png.dvc
