[tool.poetry]
name = "mnist-sandbox"
version = "0.1.0"
description = "MNIST sandbox for MLops MSU course 2023"
authors = ["rw404 <trapeznikovmisha@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
pytorch-lightning = "^2.0.9"
torchvision = "^0.15.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
